--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ a:hover {
   transition: color 0.3s linear;
 }
 
+.reporting {
+  color: #84B39D;
+}
+
 .projects {
   width:900px;
   margin:40px auto;
