--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   padding:0 20px 0 20px;
-  font-family: 'Alike', serif;
+  font-family: 'Source Code Pro';
   background-color:rgba(246,247,189,.4);
 }
 
