--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body, html {
 }
 
 .sidebar h1 {
-  font-size:1.2em;
+  font-size:1.5em;
   padding:20px 20px;
 }
 
@@ -34,6 +34,24 @@ body, html {
   padding-top: 15px;
 }
 
+/************ EMPTY HEADER **********/
+
+.emptyheader {
+  display:inline-block;
+  margin-left:25%;
+  height:50px;
+  width:70%;
+  position:fixed;
+  padding:10px 20px;
+  /*Opacity gradient*/
+  background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 80%);
+  background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 80%);
+  background: -o-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 80%);
+  background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 80%);
+  background: linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 80%);
+  border:1px dotted blue;
+}
+
 
 /************ MAIN DIV **************/
 
@@ -42,9 +60,8 @@ body, html {
   margin-left:25%;
   width:70%;
   height:100%;
-  /*text-align:center;*/
   border:1px dotted green;
-  /*position:fixed;*/
+  padding:20px 20px;
 }
 
 .main h1 {
