--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@ body, html {
   padding:20px 20px;
 }
 
+.sidebar h2 {
+  font-size:1em;
+  padding:0px 20px;
+}
+
 .sidebar ul {
   list-style: none;
   padding: 20px 20px;
@@ -37,7 +42,7 @@ body, html {
 .emptyheader {
   display:inline-block;
   margin-left:25%;
-  height:50px;
+  height:30px;
   width:70%;
   position:fixed;
   padding:10px 20px;
@@ -59,11 +64,11 @@ body, html {
   width:70%;
   height:100%;
   border:1px dotted green;
-  padding:20px 20px;
+  padding:40px 20px;
 }
 
 .main h1 {
-  margin:30px;
+  margin:20px;
   padding:10px;
 }
 
@@ -73,9 +78,9 @@ body, html {
 
 .main p {
   font-size: 1em;
-  line-height:160%;
+  line-height:120%;
   text-align:justify;
-  padding:30px;
+  padding:0px 30px;
 }
 
 /********** LINK STYLING ************/
