Add color scheme

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/*********** COLOR SCHEME ***********/
+
+/* http://colorschemedesigner.com/#0X21Tddp9cOcO */
+
 body, html {
   height:100%;
   margin:0;
