--- a/css/the-big-picture.css
+++ b/css/the-big-picture.css
@@ -11,7 +11,7 @@ body {
 }
 
 .full {
-  background: url(../img/succulent.png) no-repeat center center fixed; 
+  background: url(../img/coffee.png) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
